[gd_scene load_steps=9 format=2]

[ext_resource path="res://UserInterface.gd" type="Script" id=1]
[ext_resource path="res://heart.png" type="Texture" id=2]
[ext_resource path="res://hamburger.png" type="Texture" id=3]
[ext_resource path="res://drop.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.184314, 0.184314, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.301961 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.419608, 0.305882, 0.203922, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.47451, 0.945098, 0.952941, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.39
anchor_top = 0.848
anchor_right = 0.39
anchor_bottom = 0.848
margin_left = 20.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodBar" type="ProgressBar" parent="."]
anchor_left = 0.39
anchor_top = 0.83
anchor_right = 0.39
anchor_bottom = 0.83
margin_left = 20.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterBar" type="ProgressBar" parent="."]
anchor_left = 0.39
anchor_top = 0.83
anchor_right = 0.39
anchor_bottom = 0.83
margin_left = 220.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="TextureRect" parent="."]
margin_left = 755.85
margin_top = 899.794
margin_right = 795.85
margin_bottom = 939.794
texture = ExtResource( 3 )

[node name="Heart" type="TextureRect" parent="."]
margin_left = 755.859
margin_top = 920.955
margin_right = 1267.86
margin_bottom = 1432.96
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureRect" parent="."]
margin_left = 957.557
margin_top = 900.225
margin_right = 997.557
margin_bottom = 940.225
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
